--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ test:
   script:
     # this configures Django application to use attached postgres database that is run on `postgres` host
     # - export DATABASE_URL=postgres://postgres:@postgres:5432/python-test-app
-    - apt-get update -qy
-    - apt-get install -y python3-dev python3-pip
+    - apk update -qy
+    - apk install -y python3-dev python3-pip
     - python3 -m pip install -r requirements-dev.txt
     - python3 manage.py test
     - python3 scram/functional_tests.py
