--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,29 @@
 stages:
+  - builder_image
   - test
-  - deploy
+
+builder_image:
+  stage: builder_image
+  image: docker:19.03.12
+  services:
+    - docker:19.03.12-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
+    IMAGE_NAME: ${CI_REGISTRY_IMAGE}/scram_test
+
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
+  script:
+    - docker pull $IMAGE_NAME:latest || true
+    - docker build --target builder --cache-from $IMAGE_NAME:latest --tag $IMAGE_NAME:latest
+    - docker push $IMAGE_NAME:latest
 
 test:
   stage: test
+  image: ${CI_REGISTRY_IMAGE}/scram_test:latest
   script:
     # this configures Django application to use attached postgres database that is run on `postgres` host
     # - export DATABASE_URL=postgres://postgres:@postgres:5432/python-test-app
-    - apk update -qy
-    - apk install -y python3-dev python3-pip
-    - python3 -m pip install -r requirements-dev.txt
     - python3 manage.py test
     - python3 scram/functional_tests.py
