--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ builder_image:
     - docker:19.03.12-dind
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
-    IMAGE_NAME: ${CI_REGISTRY_IMAGE}/scram_test
+    IMAGE_NAME: ${CI_REGISTRY_IMAGE}/scram_test:latest
 
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
