--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,14 +9,13 @@ builder_image:
     - docker:19.03.12-dind
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
-    IMAGE_NAME: ${CI_REGISTRY_IMAGE}/scram_test:latest
 
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
   script:
-    - docker pull $IMAGE_NAME:latest || true
-    - docker build --target builder --cache-from $IMAGE_NAME:latest --tag $IMAGE_NAME:latest
+    - docker pull $CI_REGISTRY_IMAGE:latest || true
+    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:latest .
     - docker push $IMAGE_NAME:latest
 
 test:
