--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,8 @@ pytest:
     - docker-compose -f local.yml up -d
   script:
     - docker-compose -f local.yml run django pytest
+  after_script:
+    - docker-compose -f local.yml rm -s -f
 
 gemnasium-dependency_scanning:
   variables:
