--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,10 +30,10 @@ pytest:
   before_script:
     - docker-compose -f local.yml build
     # Ensure celerybeat does not crash due to non-existent tables
-    - docker-compose -f local.yml run --rm scram_django python manage.py migrate
+    - docker-compose -f local.yml run --rm django python manage.py migrate
     - docker-compose -f local.yml up -d
   script:
-    - docker-compose -f local.yml run scram_django pytest
+    - docker-compose -f local.yml run django pytest
   after_script:
     - docker-compose -f local.yml rm -s -f
 
