build(volume): mount volume for local development

--- a/local.yml
+++ b/local.yml
@@ -13,6 +13,8 @@ services:
     container_name: django
     depends_on:
       - postgres
+    volumes:
+      - .:/app:z
     env_file:
       - ./.envs/.local/.django
       - ./.envs/.local/.postgres
