--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,14 +28,14 @@ pytest:
   services:
     - docker:dind
   before_script:
-    - docker-compose -f local.yml build
+    - docker-compose -f ci.yml build
     # Ensure celerybeat does not crash due to non-existent tables
-    - docker-compose -f local.yml run --rm django python manage.py migrate
-    - docker-compose -f local.yml up -d
+    - docker-compose -f ci.yml run --rm django python manage.py migrate
+    - docker-compose -f ci.yml up -d
   script:
-    - docker-compose -f local.yml run django pytest
+    - docker-compose -f ci.yml run django pytest
   after_script:
-    - docker-compose -f local.yml rm -s -f
+    - docker-compose -f ci.yml rm -s -f
 
 gemnasium-dependency_scanning:
   variables:
