--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,19 +22,26 @@ flake8:
 
 pytest:
   stage: test
-  variables:
-    SHARED_PATH: $CI_PROJECT_DIR
   image: docker/compose:latest
   services:
     - docker:dind
   before_script:
-    - ls -la .
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
+
+    # Build using the cache
+    - .ci-scripts/pull_images.sh
     - docker-compose -f local.yml build
+    - .ci-scripts/push_images.sh
+
     # Ensure celerybeat does not crash due to non-existent tables
     - docker-compose -f local.yml run --rm django python manage.py migrate
     - docker-compose -f local.yml up -d
   script:
     - docker-compose -f local.yml run django pytest
+
+  after_script:
+    - docker-compose -f local.yml rm --force --stop
 
 gemnasium-dependency_scanning:
   variables:
