Add some simple behave tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
+ignore = F811, W503
 max-line-length = 120
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
 
@@ -27,3 +28,6 @@ include = scram/*
 omit = *migrations*, *tests*
 plugins =
     django_coverage_plugin
+
+[behave]
+paths = scram/route_manager/tests/acceptance
