--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ pytest:
     - docker-compose -f local.yml up -d
   script:
     - docker-compose -f local.yml run django pytest
+    - docker-compose -f local.yml run django python manage.py behave --no-input
 
   after_script:
     - docker-compose -f local.yml rm --force --stop
