ci(code_quality): since the default json report isn't useful to browse, let's generate one that Gitlab can use for the MR page as well as still be usable by us if we want to download it

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,9 @@ gemnasium-dependency_scanning:
   variables:
     PIP_REQUIREMENTS_FILE: requirements/base.txt
 
-code_quality:
+code_quality_html:
+  extends: code_quality
+  variables:
+    REPORT_FORMAT: html
   artifacts:
-    paths: [gl-code-quality-report.json]
+    paths: [gl-code-quality-report.html]
