--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,15 +27,15 @@ pytest:
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
   - ".ci-scripts/pull_images.sh"
-  - docker-compose -f local.yml build
+  - make build
   - ".ci-scripts/push_images.sh"
-  - docker-compose -f local.yml run --rm django python manage.py migrate
-  - docker-compose -f local.yml up -d
+  - make migrate
+  - make run
   script:
-  - docker-compose -f local.yml run django pytest
-  - docker-compose -f local.yml run django python manage.py behave --no-input
+  - make pytest
+  - make behave-all
   after_script:
-  - docker-compose -f local.yml rm --force --stop
+  - make clean
 gemnasium-dependency_scanning:
   variables:
     PIP_REQUIREMENTS_FILE: requirements/base.txt
