--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,15 +27,16 @@ pytest:
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
   - ".ci-scripts/pull_images.sh"
-  - make build
+  - docker-compose -f local.yml build
   - ".ci-scripts/push_images.sh"
-  - make migrate
-  - make run
+  - docker-compose -f local.yml run django python manage.py makemigrations
+  - docker-compose -f local.yml run django python manage.py migrate
+  - docker-compose -f local.yml up -d
   script:
-  - make pytest
-  - make behave-all
+  - docker-compose -f local.yml run django pytest
+  - docker-compose -f local.yml run django python manage.py behave --no-input --simple
   after_script:
-  - make clean
+  - docker-compose -f local.yml rm -f -s
 gemnasium-dependency_scanning:
   variables:
     PIP_REQUIREMENTS_FILE: requirements/base.txt
