fix(repo): ansible wants .git on the end of the repo name

--- a/playbook.yml
+++ b/playbook.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: Clone SCRAM repository
       git:
-        repo: https://gitlab.es.net/security/scram
+        repo: https://gitlab.es.net/security/scram.git
         dest: /usr/local/scram
         version: main
 
