fix(python3): move to python3

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: bhr-netlab.es.net
+  vars:
+    ansible_python_interpreter: /bin/python3
   tasks:
     - name: Clone SCRAM repository
       git:
