fix(ignore): dont share pycharm anythings

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -9,6 +9,8 @@
         dest: /usr/local/scram
         version: main
 
+    - name: Create .env files
+
     - name: Start docker-compose
       docker_compose:
         project_src: /usr/local/scram/
