--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,16 +2,44 @@
 - hosts: bhr-netlab.es.net
   vars:
     ansible_python_interpreter: /bin/python3
+    scram_user: 'scram'
+    scram_home: '/usr/local/scram'
+    scram_django_secret_key: !vault |
+      $ANSIBLE_VAULT;1.1;AES256
+      37353133393361393233336139383865636231303334353931303165323930353535396163353436
+      3563623631393434313631633031323961353561396133380a626333313432313136336336623038
+      37396635633362393932393663323631396534613930373139383066303938613765633736366337
+      6335373633373366300a623865613063393663386462386330303330336665643833393434343663
+      36613932393736326636343631626161313230396565383133363236663338396536313962633263
+      62326532666538666538376363613362313862636334663237636138353630316233646363356630
+      353430346234656337323438393735386166
+
   tasks:
+    - name: Create SCRAM group
+      group:
+        name: "{{ scram_user }}"
+        state: present
+
+    - name: Create SCRAM user
+      user:
+        name: "{{ scram_user }}"
+        comment: "SCRAM User"
+        group: "{{ scram_user }}"
+
     - name: Clone SCRAM repository
       git:
         repo: https://gitlab.es.net/security/scram.git
-        dest: /usr/local/scram
+        dest: "{{ scram_home }}"
         version: main
 
-    - name: Create .env files
+    - name: Create production .env files
+      file:
+        path: "{{ scram_home }}/.envs/.production"
+        state: directory
+        owner: "{{ scram_user }}"
+        group: "{{ scram_user }}"
 
     - name: Start docker-compose
       docker_compose:
-        project_src: /usr/local/scram/
-        files: local.yml
+        project_src: "{{ scram_home }}"
+        files: production.yml
