fix(ansible): make sure we are in the correct directory for the migrations to be made

--- a/playbook.yml
+++ b/playbook.yml
@@ -73,6 +73,8 @@
 
     - name: Run django migrations and collectstatic
       command: "docker-compose -f production.yml run django python manage.py {{ item }}"
+      args:
+        chdir: "{{ scram_home }}"
       loop:
         - makemigrations
         - migrate
