fix(playbook): ignore errors on killing old containers if they arent

--- a/playbook.yml
+++ b/playbook.yml
@@ -65,6 +65,7 @@
         project_src: "{{ scram_home }}"
         files: production.yml
         state: absent
+      failed_when: false
 
     - name: Start docker-compose
       docker_compose:
