--- a/playbook.yml
+++ b/playbook.yml
@@ -3,7 +3,7 @@
   vars:
     ansible_python_interpreter: /bin/python3
     scram_manager_email: soehlert@es.net
-    scram_code_branch: topic/soehlert/detailview_sec-299
+    scram_code_branch: main
     scram_user: 'scram'
     scram_home: '/usr/local/scram'
     scram_django_secret_key: !vault |
