fix(git): need to force the clone otherwise it errors out
there MUST be a better way to do this but i can't figure it out

--- a/playbook.yml
+++ b/playbook.yml
@@ -44,6 +44,7 @@
         repo: https://gitlab.es.net/security/scram.git
         dest: "{{ scram_home }}"
         version: "{{ scram_code_branch }}"
+        force: true
 
     - name: Create production .env files
       file:
