--- a/ansible/inventory/group_vars/mac.yml
+++ b/ansible/inventory/group_vars/mac.yml
@@ -4,3 +4,4 @@ ansible_python_interpreter: /usr/local/bin/python3
 scram_user: "{{ ansible_user_id }}"
 scram_home: "/Users/{{ scram_user }}/projects/scram/"
 scram_group: "staff"
+scram_traefik_host: localhost
