--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -2,6 +2,7 @@
 scram_manager_email: person@example.com
 scram_code_branch: main
 scram_install_user: true
+scram_prod: false
 scram_user: 'scram'
 scram_group: 'scram'
 scram_uid: '9999'
