PoC for redis to GoBGP translator over gRPC

--- a/local.yml
+++ b/local.yml
@@ -53,11 +53,21 @@ services:
     ports:
       - "6379"
 
-  client:
-    image: golang:1.17.1-alpine
+  gobgp:
+    image: jauderho/gobgp:v2.32.0
+    volumes:
+      - $CI_PROJECT_DIR/gobgp_config:/config:z
+    ports:
+      - "179"
+      - "50051"
+
+  redis_to_gobgp_translator:
+    build:
+      context: .
+      dockerfile: ./compose/local/translator/Dockerfile
     depends_on:
-      - django
       - redis
+      - gobgp
 
   celeryworker:
     <<: *django
