--- a/ansible/inventory/host_vars/localhost.yml
+++ b/ansible/inventory/host_vars/localhost.yml
@@ -1,5 +1,5 @@
 ---
 ansible_connection: local
-scram_traefik_host: localhost
+scram_nginx_host: localhost
 scram_django_secret_key: thisdoesnotmattermuchforlocalhostbutchangeforproduction
 scram_postgres_password: thisalsodoesnotmattermuchforlocalhostbutchangeforproduction
