--- a/production.yml
+++ b/production.yml
@@ -3,7 +3,7 @@ version: '3'
 volumes:
   production_postgres_data: {}
   production_postgres_data_backups: {}
-  production_traefik: {}
+  production_nginx: {}
 
 services:
   django: &django
@@ -30,15 +30,14 @@ services:
     env_file:
       - ./.envs/.production/.postgres
 
-  traefik:
-    build:
-      context: .
-      dockerfile: ./compose/production/traefik/Dockerfile
-    image: scram_production_traefik
+  nginx:
+    image: nginx:1.19
+    restart: on-failure:5
     depends_on:
       - django
     volumes:
-      - production_traefik:/etc/traefik/acme:z
+      - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
+      - production_nginx:/app/nginx
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
@@ -61,5 +60,3 @@ services:
     <<: *django
     image: scram_production_flower
     command: /start-flower
-
-  
