--- a/production.yml
+++ b/production.yml
@@ -14,6 +14,8 @@ services:
     depends_on:
       - postgres
       - redis
+    volumes:
+      - ./staticfiles:/staticfiles
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
@@ -38,6 +40,7 @@ services:
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
       - production_nginx:/app/nginx
+      - ./staticfiles:/staticfiles
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
