--- a/playbook.yml
+++ b/playbook.yml
@@ -59,13 +59,21 @@
           owner: "{{ scram_user }}"
           group: "{{ scram_group }}"
 
+      - name: Deploy nginx config
+        template:
+          src: "ansible/nginx.conf.j2"
+          dest: "{{ scram_home }}/compose/production/nginx/nginx.conf"
+          owner: "{{ scram_user }}"
+          group: "{{ scram_group }}"
+        when: "'localhost' not in inventory_hostname"
+
       - name: Deploy local nginx config
         template:
           src: "ansible/nginx-local.conf.j2"
           dest: "{{ scram_home }}/compose/production/nginx/nginx.conf"
           owner: "{{ scram_user }}"
           group: "{{ scram_group }}"
-      when: "'localhost' in inventory_hostname"
+        when: "'localhost' in inventory_hostname"
       tags:
         - configs
 
@@ -108,7 +116,7 @@
       - name: Show django URL
         debug:
           var: django_url.stdout
-        failed_when: '"http://" | string in django_url.stdout'
+        failed_when: '"http:// " | string in django_url.stdout'
       rescue:
         - name: Just show localhost URL when appropriate
           debug:
