--- a/playbook.yml
+++ b/playbook.yml
@@ -99,12 +99,6 @@
         - configs
 
     - block:
-      - name: Toggle prod
-        make:
-          chdir: "{{ scram_home }}"
-          target: toggle-prod
-        changed_when: false
-
       - name: Ensure SSL directory exists when in staging/production
         file:
           path: "{{ scram_nginx_ssl }}"
@@ -113,13 +107,24 @@
           group: root
         when: "'localhost' not in inventory_hostname"
 
-        # This file is what adds the volumes for nginx cert stuff to work
+        # This adds the volumes for nginx cert stuff to work
         # since we don't run certs in the prod-on-local situation we don't want that
-      - name: Remove prod override docker compose file on localhost
-        file:
-          path: ./production.override.yml
-          state: absent
-        when: "'localhost' in inventory_hostname"
+      - name: Add cert mounts for prod SSL
+        lineinfile:
+          path: ./production.yml
+          insertafter: "- ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+          line: "{{ item }}"
+        loop:
+          - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
+          - /etc/scram/ssl/server.key:/etc/ssl/server.key
+        when: "'localhost' not in inventory_hostname"
+
+      - name: Toggle prod
+        make:
+          chdir: "{{ scram_home }}"
+          target: toggle-prod
+        changed_when: false
+
       when: scram_prod
 
     - name: Toggle local
