--- a/playbook.yml
+++ b/playbook.yml
@@ -115,8 +115,8 @@
           insertafter: "- ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
           line: "{{ item }}"
         loop:
-          - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
-          - /etc/scram/ssl/server.key:/etc/ssl/server.key
+          - "      - /etc/scram/ssl/server.crt:/etc/ssl/server.crt"
+          - "      - /etc/scram/ssl/server.key:/etc/ssl/server.key"
         when: "'localhost' not in inventory_hostname"
 
       - name: Toggle prod
