--- a/playbook.yml
+++ b/playbook.yml
@@ -112,12 +112,12 @@
       - name: Add cert mounts for prod SSL
         lineinfile:
           path: "{{ scram_home }}/production.yml"
-          insertafter: "- ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf"
+          state: absent
           line: "{{ item }}"
         loop:
-          - "      - /etc/scram/ssl/server.crt:/etc/ssl/server.crt"
-          - "      - /etc/scram/ssl/server.key:/etc/ssl/server.key"
-        when: "'localhost' not in inventory_hostname"
+          - "^- /etc/scram/ssl/server.crt:/etc/ssl/server.crt"
+          - "^- /etc/scram/ssl/server.key:/etc/ssl/server.key"
+        when: "'localhost' in inventory_hostname"
 
       - name: Toggle prod
         make:
