--- a/production.yml
+++ b/production.yml
@@ -39,6 +39,8 @@ services:
       - django
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
+      - /etc/scram/ssl/server.key:/etc/ssl/server.key
       - ./staticfiles:/staticfiles
 
     ports:
