--- a/playbook.yml
+++ b/playbook.yml
@@ -79,6 +79,7 @@
         loop:
           - django
           - postgres
+      when: scram_prod
 
     - block:
       - name: Create nginx directory
@@ -87,6 +88,7 @@
           path: "{{ scram_home }}/compose/production/nginx"
           owner: "{{ scram_user }}"
           group: "{{ scram_group }}"
+        when: scram_prod
 
       - name: Deploy nginx config
         template:
