--- a/playbook.yml
+++ b/playbook.yml
@@ -82,13 +82,12 @@
       when: scram_prod
 
     - block:
-      - name: Create nginx directory
+      - name: Create prod nginx directory
         file:
           state: directory
           path: "{{ scram_home }}/compose/production/nginx"
           owner: "{{ scram_user }}"
           group: "{{ scram_group }}"
-        when: scram_prod
 
       - name: Deploy nginx config
         template:
