--- a/production.yml
+++ b/production.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       - postgres
       - redis
+    networks:
+      - default
     volumes:
       - ./staticfiles:/staticfiles
     env_file:
@@ -27,6 +29,8 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: scram_production_postgres
+    networks:
+      - default
     volumes:
       - production_postgres_data:/var/lib/postgresql/data:Z
       - production_postgres_data_backups:/backups:z
@@ -38,6 +42,8 @@ services:
     restart: on-failure:5
     depends_on:
       - django
+    networks:
+      - default
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
@@ -53,24 +59,70 @@ services:
     image: redis:5.0
     volumes:
       - production_redis_data:Z
+    networks:
+      - default
 
-  client:
-    image: golang:1.17.1-alpine
+  gobgp:
+    image: jauderho/gobgp:v2.32.0
+    networks:
+      - default
+      - clab
+    volumes:
+      - $CI_PROJECT_DIR/gobgp_config:/config:z
+    ports:
+      - "179"
+      - "50051"
+
+  redis_to_gobgp_translator:
+    build:
+      context: .
+      dockerfile: ./compose/local/translator/Dockerfile
     depends_on:
-      - django
       - redis
+      - gobgp
+    networks:
+      - default
 
   celeryworker:
     <<: *django
     image: scram_production_celeryworker
     command: /start-celeryworker
+    networks:
+      - default
 
   celerybeat:
     <<: *django
     image: scram_production_celerybeat
     command: /start-celerybeat
+    networks:
+      - default
 
   flower:
     <<: *django
     image: scram_production_flower
     command: /start-flower
+    networks:
+      - default
+
+networks:
+  default:
+    enable_ipv6: true
+    driver: bridge
+    driver_opts:
+      com.docker.network.enable_ipv6: "true"
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.6.0.0/24
+        - subnet: 2001:db6::/64
+
+  clab:
+    enable_ipv6: true
+    driver: macvlan
+    driver_opts:
+      parent: scram_clab
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.0.0.0/24
+        - subnet: 2001:db8::/64
