--- a/production.yml
+++ b/production.yml
@@ -12,6 +12,8 @@ services:
       context: .
       dockerfile: ./compose/production/django/Dockerfile
     image: scram_production_django
+    networks:
+      - default
     depends_on:
       - postgres
       - redis
@@ -27,6 +29,8 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: scram_production_postgres
+    networks:
+      - default
     volumes:
       - production_postgres_data:/var/lib/postgresql/data:Z
       - production_postgres_data_backups:/backups:z
@@ -38,12 +42,13 @@ services:
     restart: on-failure:5
     depends_on:
       - django
+    networks:
+      - default
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
       - /etc/scram/ssl/server.key:/etc/ssl/server.key
       - ./staticfiles:/staticfiles
-
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
@@ -51,11 +56,16 @@ services:
 
   redis:
     image: redis:5.0
+    networks:
+      - default
     volumes:
       - production_redis_data:Z
 
   gobgp:
     image: jauderho/gobgp:v2.32.0
+    networks:
+      - default
+      - clab
     volumes:
       - $CI_PROJECT_DIR/gobgp_config:/config:z
     ports:
@@ -69,6 +79,8 @@ services:
     depends_on:
       - redis
       - gobgp
+    networks:
+      - default
 
   celeryworker:
     <<: *django
@@ -80,9 +92,36 @@ services:
   celerybeat:
     <<: *django
     image: scram_production_celerybeat
+    networks:
+      - default
     command: /start-celerybeat
 
   flower:
     <<: *django
     image: scram_production_flower
+    networks:
+      - default
     command: /start-flower
+
+  networks:
+    default:
+      enable_ipv6: true
+      driver: bridge
+      driver_opts:
+        com.docker.network.enable_ipv6: "true"
+      ipam:
+        driver: default
+        config:
+          - subnet: 10.6.0.0/24
+          - subnet: 2001:db6::/64
+
+    clab:
+      enable_ipv6: true
+      driver: macvlan
+      driver_opts:
+        parent: scram_clab
+      ipam:
+        driver: default
+        config:
+          - subnet: 10.0.0.0/24
+          - subnet: 2001:db8::/64
