--- a/production.yml
+++ b/production.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       - postgres
       - redis
+    networks:
+      - default
     volumes:
       - ./staticfiles:/staticfiles
     env_file:
@@ -27,6 +29,8 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: scram_production_postgres
+    networks:
+      - default
     volumes:
       - production_postgres_data:/var/lib/postgresql/data:Z
       - production_postgres_data_backups:/backups:z
@@ -38,6 +42,8 @@ services:
     restart: on-failure:5
     depends_on:
       - django
+    networks:
+      - default
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
@@ -50,6 +56,8 @@ services:
 
   redis:
     image: redis:5.0
+    networks:
+      - default
     volumes:
       - production_redis_data:Z
 
@@ -57,8 +65,13 @@ services:
     image: jauderho/gobgp:v2.32.0
     volumes:
       - $CI_PROJECT_DIR/gobgp_config:/config:z
+    networks:
+      default: {}
+      peering:
+        ipv4_address: ${SCRAM_V4_ADDRESS}
+        ipv6_address: ${SCRAM_V6_ADDRESS}
     ports:
-      - "179"
+      - "179:179"
       - "50051"
 
   redis_to_gobgp_translator:
@@ -68,3 +81,29 @@ services:
     depends_on:
       - redis
       - gobgp
+    networks:
+      - default
+
+networks:
+  default:
+    enable_ipv6: true
+    driver: bridge
+    internal: true
+    ipam:
+      driver: default
+      config:
+        - subnet: 10.6.0.0/24
+        - subnet: 2001:db6::/64
+
+  peering:
+    enable_ipv6: true
+    driver: macvlan
+    driver_opts:
+      parent: ${SCRAM_PEERING_IFACE}
+    ipam:
+      driver: default
+      config:
+        - subnet: ${SCRAM_V4_SUBNET}
+          gateway: ${SCRAM_V4_GATEWAY}
+        - subnet: ${SCRAM_V6_SUBNET}
+          gateway: ${SCRAM_V6_GATEWAY}
