fix(gobgp-volume): CI_PROJECT_DIR doesnt exist on the host so the container starts up with no config

--- a/production.yml
+++ b/production.yml
@@ -64,7 +64,7 @@ services:
   gobgp:
     image: jauderho/gobgp:v2.32.0
     volumes:
-      - $CI_PROJECT_DIR/gobgp_config:/config:z
+      - ./gobgp_config:/config:z
     networks:
       default: {}
       peering:
