--- a/production.yml
+++ b/production.yml
@@ -20,6 +20,7 @@ services:
     env_file:
       - ./.envs/.production/.django
       - ./.envs/.production/.postgres
+      - /etc/vault.d/secrets/kv_root_security.env
     command: /start
 
   postgres:
