Revert "ci(cobertura): fix syntax since gitlab changed it for coverage in the latest release"
This reverts commit 8d27cae1adf6d9cb47690df46322d6c8631b6b82.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,9 +39,7 @@ pytest:
   - make clean
   artifacts:
     reports:
-      coverage_report:
-        coverage_format: cobertura
-        path: coverage.xml
+      cobertura: coverage.xml
 gemnasium-dependency_scanning:
   variables:
     PIP_REQUIREMENTS_FILE: requirements/base.txt
