--- a/production.yml
+++ b/production.yml
@@ -7,7 +7,7 @@ volumes:
   production_nginx: {}
 
 services:
-  django: &django
+  django:
     build:
       context: .
       dockerfile: ./compose/production/django/Dockerfile
@@ -47,7 +47,6 @@ services:
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
-      - "0.0.0.0:5555:5555"
 
   redis:
     image: redis:5.0
