--- a/local.yml
+++ b/local.yml
@@ -61,7 +61,7 @@ services:
       - "179"
       - "50051"
 
-  redis_to_gobgp_translator:
+  translator:
     build:
       context: .
       dockerfile: ./compose/local/translator/Dockerfile
