--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -4,8 +4,8 @@ ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
 RUN apt-get update \
-  # dependencies for building Python packages
-  && apt-get install -y build-essential git \
+  # dependencies for building Python packages and Docker healthcheck
+  && apt-get install -y build-essential curl git \
   # psycopg2 dependencies
   && apt-get install -y libpq-dev \
   # Translations dependencies
