--- a/production.yml
+++ b/production.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       - postgres
       - redis
+    networks:
+      default: {}
     volumes:
       - ./staticfiles:/staticfiles
     env_file:
@@ -34,6 +36,8 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: scram_production_postgres
+    networks:
+      default: {}
     volumes:
       - production_postgres_data:/var/lib/postgresql/data:Z
       - production_postgres_data_backups:/backups:z
@@ -45,17 +49,21 @@ services:
     restart: on-failure:5
     depends_on:
       - django
+    networks:
+      default: {}
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
       - /etc/scram/ssl/server.key:/etc/ssl/server.key
       - ./staticfiles:/staticfiles
     ports:
-      - "0.0.0.0:80:80"
-      - "0.0.0.0:443:443"
+      - "443:443"
+      - "80:80"
 
   redis:
     image: redis:5.0
+    networks:
+      default: {}
     volumes:
       - production_redis_data:/var/lib/redis:Z
 
@@ -79,10 +87,18 @@ services:
     depends_on:
       - redis
       - gobgp
+    networks:
+      default: {}
     env_file:
       - ./.envs/.production/.translator
 
 networks:
+  default:
+    enable_ipv6: true
+    ipam:
+      driver: default
+      config:
+        - subnet: 2001:0DB8::/112
   peering:
     enable_ipv6: true
     driver: macvlan
