refactor(v6-space): use the preferred v6 space based on the expert opinion of Nick Buraglio

--- a/local.yml
+++ b/local.yml
@@ -90,4 +90,4 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 2001:0DB8::/112
+        - subnet: 0200:c0:ff:ee::/48
