--- a/production.yml
+++ b/production.yml
@@ -98,7 +98,7 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 2001:0DB8::/112
+        - subnet: 0200:c0:ff:ee::/48
   peering:
     enable_ipv6: true
     driver: macvlan
