--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,8 @@ services:
       - postgres
     networks:
       default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     volumes:
       - $CI_PROJECT_DIR:/app:z
       - /tmp/profile_data:/tmp/profile_data
@@ -37,31 +39,18 @@ services:
     image: scram_production_postgres
     networks:
       default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     volumes:
       - local_postgres_data:/var/lib/postgresql/data:Z
       - local_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.local/.postgres
 
-  docs:
-    image: scram_local_docs
-    build:
-      context: .
-      dockerfile: ./compose/local/docs/Dockerfile
-    env_file:
-      - ./.envs/.local/.django
-    networks:
-      default: {}
-    volumes:
-      - $CI_PROJECT_DIR/docs:/docs:z
-      - $CI_PROJECT_DIR/config:/app/config:z
-      - $CI_PROJECT_DIR/scram:/app/scram:z
-    ports:
-      - "7000"
-    command: /start-docs
-
   redis:
     image: redis:5.0
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     ports:
       - "6379"
 
@@ -69,6 +58,8 @@ services:
     image: jauderho/gobgp:v2.32.0
     networks:
       default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     volumes:
       - $CI_PROJECT_DIR/gobgp_config:/config:z
     ports:
@@ -81,12 +72,13 @@ services:
       dockerfile: ./compose/local/translator/Dockerfile
     networks:
       default: {}
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     depends_on:
       - gobgp
 
 networks:
   default:
-    enable_ipv6: true
     ipam:
       driver: default
       config:
