fix(v6): allow for a real v6 network inside the docker network for scram_default

--- a/production.yml
+++ b/production.yml
@@ -109,7 +109,7 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 0200:c0:ff:ee::/48
+        - subnet: ${SCRAM_INTERNAL_V6_SUBNET}
   peering:
     enable_ipv6: true
     driver: macvlan
