--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ flake8:
 
 pytest:
   stage: test
-  image: docker/compose:latest
+  image: docker/24.0.6-dind
   services:
   - docker:dind
   before_script:
