--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,6 +25,11 @@ jobs:
       - name: "[flake8]: run"
         run: "./.ci-scripts/flake8_run.sh"
 
+      - name: Cache Docker images.
+        uses: ScribeMD/docker-cache@0.3.7
+        with:
+          key: docker-${{ runner.os }}-${{ hashFiles(paths) }}
+
       - name: "[pytest]: before"
         run: "./.ci-scripts/pytest_before.sh"
 
