--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ flake8:
 pytest:
   stage: test
   image: docker:24.0.6-dind
+  tags:
+    - privileged
   services:
   - docker:dind
   before_script:
