--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -26,6 +26,7 @@ COPY ./compose/local/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
+ENV PATH="$PATH:/app"
 WORKDIR /app
 
 ENTRYPOINT ["/entrypoint"]
