--- a/local.yml
+++ b/local.yml
@@ -1,3 +1,4 @@
+---
 version: '3.4'
 
 volumes:
@@ -11,9 +12,9 @@ services:
       dockerfile: ./compose/local/django/Dockerfile
     image: scram_local_django
     depends_on:
-      - postgres
+      postgres:
         condition: service_healthy
-      - redis
+      redis:
         condition: service_healthy
     networks:
       default: {}
@@ -29,7 +30,7 @@ services:
       - "8000"
     command: /start
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://django:8000/process_expired/" ]
+      test: ["CMD", "curl", "-f", "http://django:8000/process_expired/"]
       interval: 30s
       timeout: 30s
       start_period: 30s
@@ -59,7 +60,7 @@ services:
     ports:
       - "6379"
     healthcheck:
-      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
 
   gobgp:
     image: jauderho/gobgp:v2.32.0
